--- a/styles/style-750.css
+++ b/styles/style-750.css
@@ -4,6 +4,7 @@
     display: none;
 }
 
+
 #menuToggle {
     display: block;
     position: relative;
@@ -28,9 +29,7 @@
 .expand {
     width: 70px;
     height: 70px;
-    /* position: absolute;
-    top: -100px;
-    left: -100px; */
+    
 }
 
 #menuToggle input {
@@ -42,15 +41,11 @@
     left: -5px;
     cursor: pointer;
     opacity: 0;
-    /* hide this */
     z-index: 6;
-    /* and place it over the hamburger */
-    -webkit-touch-callout: none;
+        -webkit-touch-callout: none;
 }
 
-/*
-   * Just a quick hamburger
-   */
+
 #menuToggle span {
     display: block;
     width: 33px;
@@ -72,35 +67,25 @@
     transform-origin: 0% 100%;
 }
 
-/* 
-   * Transform all the slices of hamburger
-   * into a crossmark.
-   */
+
 #menuToggle input:checked~span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
     background: #232323;
 }
 
-/*
-   * But let's hide the middle one.
-   */
+
 #menuToggle input:checked~span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/*
-   * Ohyeah and the last one should go the other direction
-   */
+
 #menuToggle input:checked~span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
 }
 
-/*
-   * Make this absolute positioned
-   * at the top left of the screen
-   */
+
 #menu {
     position: absolute;
     width: 350px;
@@ -110,7 +95,7 @@
     background: #ffffff;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
+
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
@@ -121,9 +106,7 @@
     font-size: 22px;
 }
 
-/*
-   * And let's slide it in from the left
-   */
+
 #menuToggle input:checked~ul {
     transform: none;
 }
@@ -141,6 +124,9 @@
     color: rgb(34, 34, 34);
 }
 
+nav {
+    height : 75px;
+}
 
 
 /* GLOBAL */
