--- a/styles/style-750.css
+++ b/styles/style-750.css
@@ -124,9 +124,6 @@
     color: rgb(34, 34, 34);
 }
 
-nav {
-    height : 75px;
-}
 
 
 /* GLOBAL */
@@ -168,7 +165,15 @@ h5 {
     font-size: 1.2rem;
 }
 
+#up {
+    display : none;
+}
+
 /* HEADER */
+nav {
+    height : 75px;
+}
+
 
 header h2 {
     font-size: 1.5rem;
