--- a/styles/style.css
+++ b/styles/style.css
@@ -57,11 +57,16 @@ h3 {
 
 /* Mes images sont dans des div, des img avec ceci les rendra accessibles aux personnes en situation de handicap */
 .image-accessibilite {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
+    position: absolute !important;
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    clip-path: inset(50%) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
 }
 
 /* BARRE DE NAV */
