--- a/styles/style-750.css
+++ b/styles/style-750.css
@@ -7,122 +7,83 @@
 
 #menuToggle {
     display: block;
-    position: relative;
-    top: 35px;
-    left: 50px;
-    z-index: 3;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-}
-
-#menuToggle a {
-    text-decoration: none;
-    color: #232323;
-    transition: color 0.3s ease;
-}
-
-#menuToggle a:hover {
-    color: rgb(152, 152, 152);
-}
-
-.expand {
-    width: 70px;
-    height: 70px;
-    
-}
-
-#menuToggle input {
-    display: block;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    top: -5px;
-    left: -5px;
-    cursor: pointer;
-    opacity: 0;
-    z-index: 6;
-        -webkit-touch-callout: none;
+  position: fixed;
+  left: 20px;
+  top : 20px;
+  z-index: 100;
 }
 
 
 #menuToggle span {
-    display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-    background: #000000;
-    border-radius: 3px;
-    z-index: 1;
-    transform-origin: 4px 0px;
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  display: block;
+  position : relative;
+  z-index: 200;
+  width: 30px;
+  border-radius: 20px;
+  height: 3px;
+  margin: 6px 0;
+  background: #000;
+  transition: all 0.3s ease;
+  
 }
 
-#menuToggle span:first-child {
-    transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2) {
-    transform-origin: 0% 100%;
-}
-
-
-#menuToggle input:checked~span {
-    opacity: 1;
-    transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
-}
-
-
-#menuToggle input:checked~span:nth-last-child(3) {
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-
-#menuToggle input:checked~span:nth-last-child(2) {
-    transform: rotate(-45deg) translate(0, -1px);
+#burger {
+    cursor: pointer;
 }
 
 
 #menu {
-    position: absolute;
-    width: 350px;
-    margin: -100px 0 0 -100px;
-    padding: 0 100px 50px 100px;
-    padding-top: 125px;
-    background: #ffffff;
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-
-    transform-origin: 0% 0%;
-    transform: translate(-100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 260px;
+  height: 100vh;
+  background: #ffffff;
+  padding: 80px 30px;
+  list-style: none;
+  transform: translateX(-100%);
+  transition: transform 0.4s ease;
+  z-index: 5;
 }
 
 #menu li {
-    padding: 10px 0;
-    font-size: 22px;
+  margin: 20px 0;
 }
 
-
-#menuToggle input:checked~ul {
-    transform: none;
+#menu a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 1.2rem;
 }
+
 
 #logo-menu-burger {
-    border-bottom: solid #000000;
-    width: 200px;
-    margin-bottom: 40px;
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 40px;
+  color: rgb(0, 0, 0);
 }
 
-#logo-menu-burger i {
-    font-size: 30px;
-    color: rgb(34, 34, 34);
+
+#menuToggle.active #menu {
+  transform: translateX(0);
 }
+
+
+#menuToggle.active span:nth-child(1) {
+  transform: rotate(45deg) translate(7px, 7px);
+}
+
+#menuToggle.active span:nth-child(2) {
+  opacity: 0;
+}
+
+#menuToggle.active span:nth-child(3) {
+  transform: rotate(-45deg) translate(7px, -7px);
+}
+
 
 
 
@@ -184,6 +145,11 @@ header h2 {
 #presentation-texte {
     font-size: 14px;
 }
+
+#boutons-presentation {
+    flex-direction: column;
+}
+
 
 /* REALISATIONS */
 
