--- a/styles/style-750.css
+++ b/styles/style-750.css
@@ -89,7 +89,7 @@
 
 /* GLOBAL */
 body {
-    font-size: 12px;
+    font-size: 0.75rem;
 }
 
 .body {
@@ -97,7 +97,7 @@ body {
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 1.25rem;
     padding: 0;
     padding-bottom: 20px;
 
@@ -143,7 +143,7 @@ header h2 {
 /* PRESENTATION */
 
 #presentation-texte {
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 #boutons-presentation {
@@ -154,7 +154,7 @@ header h2 {
 /* REALISATIONS */
 
 .content-realisation-item-mobile p {
-    font-size: 13px;
+    font-size: 0.813rem;
 }
 
 
@@ -181,11 +181,11 @@ header h2 {
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-size: 15px;
+    font-size: 0.938rem;
 }
 
 .content-realisation-item-mobile i {
-    font-size: 25px;
+    font-size: 1.563rem;
     margin: 5px;
 }
 
@@ -196,6 +196,14 @@ header h2 {
 
 .cacher {
     display : none;
+}
+
+.card-container:hover .card {
+    transform: rotateY(0deg);
+}
+
+.tailleur {
+    padding-right : 23px;
 }
 
 /* COMPETENCES */
@@ -216,7 +224,7 @@ header h2 {
 }
 
 #bloc-autres h3 {
-    font-size: 20px;
+    font-size: 1.25rem;
     padding: 0;
     margin: 0;
     padding-bottom: 20px;
