--- a/styles/style.css
+++ b/styles/style.css
@@ -21,13 +21,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    visibility: hidden;
-    opacity: 1;
-    position : sticky;
+    opacity: 0;
+    position: fixed;
+    bottom: 20px;
     left: 50%;
-    bottom : 20px;
-    margin-right : 50px;
+    transform: translateX(-50%);
     transition: opacity 0.3s ease;
+    z-index : 1000;
 }
 
 #up i {
